When page scaling is in use position:fixed has incorrect results https://bugs.webkit.org/show_bug.cgi?id=68617

Reviewed by Simon Fraser.

.:

* Source/autotools/symbols.filter:

Source/WebCore:

Add the option for position:fixed elements to be fixed to the frame
instead of the layout rectangle of the document.

Tests: fast/repaint/fixed-in-page-scale.html
       fast/repaint/fixed-right-bottom-in-page-scale.html
       fast/repaint/fixed-right-in-page-scale.html

* WebCore.exp.in:
* page/FrameView.cpp:
(WebCore::FrameView::reset):
(WebCore::FrameView::scrollXForFixedPosition):
(WebCore::FrameView::scrollYForFixedPosition):
  If position:fixed elements are relative to the frame, disregard the
  drag factor.
(WebCore::FrameView::setShouldLayoutFixedElementsRelativeToFrame):
* page/FrameView.h:
(WebCore::FrameView::shouldLayoutFixedElementsRelativeToFrame):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::shouldLayoutFixedElementRelativeToFrame):
(WebCore::RenderBox::containingBlockLogicalWidthForPositioned):
(WebCore::RenderBox::containingBlockLogicalHeightForPositioned):
  If position:fixed elements are relative to the frame, their container
  is the frame instead of the layout rect of the document.
  This allows proper positioning of these elements to the right and
  bottom.
* rendering/RenderBox.h:
* testing/Internals.cpp:
(WebCore::Internals::setShouldLayoutFixedElementsRelativeToFrame):
* testing/Internals.h:
* testing/Internals.idl:
  Allow enabling and disabling the new behavior in layout tests.

Source/WebKit2:

* win/WebKit2.def:
* win/WebKit2CFLite.def:

LayoutTests:

* fast/repaint/fixed-in-page-scale-expected.png: Added.
* fast/repaint/fixed-in-page-scale-expected.txt: Added.
* fast/repaint/fixed-in-page-scale.html: Added.
* fast/repaint/fixed-right-bottom-in-page-scale-expected.png: Added.
* fast/repaint/fixed-right-bottom-in-page-scale-expected.txt: Added.
* fast/repaint/fixed-right-bottom-in-page-scale.html: Added.
* fast/repaint/fixed-right-in-page-scale-expected.png: Added.
* fast/repaint/fixed-right-in-page-scale-expected.txt: Added.
* fast/repaint/fixed-right-in-page-scale.html: Added.


Canonical link: https://commits.webkit.org/90345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101875 268f45cc-cd09-0410-ab3c-d52691b4dbfc