Source/WebCore/rendering/RenderBox.h
@@ -462,6 +462,8 @@ protected:
     void paintRootBoxFillLayers(const PaintInfo&);
 
 private:
+    bool shouldLayoutFixedElementRelativeToFrame(Frame*, FrameView*) const;
+
     bool includeVerticalScrollbarSize() const;
     bool includeHorizontalScrollbarSize() const;
 
